unpackaged/main/default/objects/cmbls__ACH_Batch__c/cmbls__ACH_Batch__c.object-meta.xml
<CustomObject>
    <label>ACH Batch</label>
    <nameField>
        <displayFormat>BATCH-{0000000}</displayFormat>
        <label>ACH Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>