unpackaged/main/default/objects/cmbls__ACH_Batch__c/fields/cmbls__ACH_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>cmbls__ACH_Provider_Name__c</fullName>
    <label>ACH Provider Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>