unpackaged/main/default/objects/cmbls__ACH_Batch__c/fields/cmbls__External_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>cmbls__External_Batch_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Batch ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>