unpackaged/main/default/objects/cmbls__ACH_Batch__c/fields/cmbls__Number_of_Transactions__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Number_of_Transactions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of records associated with batch regardless of status or type</description>
    <inlineHelpText>Count of records associated with batch regardless of status or type</inlineHelpText>
    <label>Number of Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>