unpackaged/main/default/objects/cmbls__ACH_Batch__c/fields/WellsFargo_Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>WellsFargo_Number_of_Attempts__c</fullName>
    <label>WellsFargo N# of Attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>